# quanttide-platform

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
src/qtadmin/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
src/qtadmin/docs/: README.md
src/qtadmin/docs/default/: README.md  agent.md  code.md  execute.md  index.md  infra.md  knowl.md  media.md  security.md
src/qtadmin/docs/dev/: README.md
src/qtadmin/docs/meta/: README.md  index.md
src/qtadmin/docs/prd/: README.md  default.md  index.md  meta.md  qtdata.md  work.md  work_personal.md  work_team.md
src/qtadmin/docs/user/: README.md
src/qtadmin/examples/agent/: openclaw_session.py
src/qtadmin/examples/asset/: founder.py
src/qtadmin/examples/infra/: network.py  ollama_install.py
src/qtadmin/src/cli/: CHANGELOG.md  ROADMAP.md  pyproject.toml
src/qtadmin/src/cli/docs/dev/: meta_refresh.md
src/qtadmin/src/cli/docs/user/: meta_refresh.md
src/qtadmin/src/cli/src/qtadmin_cli/: __init__.py  cli.py
src/qtadmin/src/cli/tests/: test_refresh.py
src/qtadmin/src/provider/: .gitignore  README.md  pyproject.toml
src/qtadmin/src/provider/app/: __main__.py  config.py  database.py
src/qtadmin/src/provider/app/api/: dependencies.py
src/qtadmin/src/provider/app/models/: __init__.py  employee.py  salary.py
src/qtadmin/src/provider/app/schemas/: __init__.py  base.py  employee.py  salary.py
src/qtadmin/src/provider/app/services/: salary_calculation.py
src/qtadmin/src/provider/integrated_tests/: test_qtresearch.py  test_system.py
src/qtadmin/src/provider/qtadmin_provider/: main.py  salaries.py
src/qtadmin/src/provider/tests/: conftest.py  test_projects.py  test_salaries.py  test_topics.py  test_transactions.py
src/qtadmin/src/provider/tests/test_api/: test_employees.py  test_salary.py
src/qtadmin/src/provider/tests/test_services/: test_salary_calculation.py
src/qtadmin/src/studio/: .env.example  .gitignore  README.md  pubspec.yaml
src/qtadmin/src/studio/android/app/: build.gradle
src/qtadmin/src/studio/ios/Runner/: Info.plist
src/qtadmin/src/studio/ios/Runner.xcodeproj/: project.pbxproj
src/qtadmin/src/studio/linux/: CMakeLists.txt  my_application.cc
src/qtadmin/src/studio/macos/Runner/: DebugProfile.entitlements
src/qtadmin/src/studio/macos/Runner.xcodeproj/: project.pbxproj
src/qtadmin/src/studio/test/models/: transaction_test.dart
src/qtadmin/src/studio/test/screens/: transaction_form_screen_test.dart  transaction_list_screen_test.dart
src/qtadmin/src/studio/test/widgets/: navigation_widget_test.dart
src/qtadmin/src/studio/web/: index.html  manifest.json
src/qtadmin/src/studio/windows/: CMakeLists.txt
src/qtadmin/src/studio/windows/runner/: Runner.rc  main.cpp
src/qtadmin/tests/: test_network.py
src/qtcloud-data/src/provider/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/qtcloud-data/src/provider/app/: main.py
src/qtcloud-data/src/provider/app/cruds/: __init__.py  dataset.py
src/qtcloud-data/src/provider/app/dependencies/: auth.py  db.py
src/qtcloud-data/src/provider/app/orms/: __init__.py  base.py  dataset.py
src/qtcloud-data/src/provider/app/routers/: dataset.py  record.py  schema.py
src/qtcloud-data/src/provider/app/schemas/: __init__.py  base.py  dataset.py
src/qtcloud-data/src/provider/integrated_tests/: dataset.http
src/qtcloud-data/src/provider/tests/: conftest.py  test_api_dataset.py  test_cruds_dataset.py  test_fixtures_db.py  test_orms_dataset.py  test_schemas_dataset.py
src/qtcloud-data/src/python_sdk/: README.md  pyproject.toml
src/qtcloud-data/src/python_sdk/qtcloud_data/: __init__.py
src/qtcloud-finance/src/cli/: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
src/qtcloud-finance/src/cli/docs/dev/: bookkeeper.md  config.md  index.md  reconciler.md  tui.md
src/qtcloud-finance/src/cli/docs/qa/: tui.md
src/qtcloud-finance/src/cli/src/qtcloud_finance_cli/: __main__.py  bookkeeper.py  config.py  reconciler.py  tui.py
src/qtcloud-finance/src/cli/tests/: conftest.py  test_bookkeeper.py  test_config.py  test_reconciler.py
src/qtcloud-think/src/cli/: pyproject.toml
src/qtcloud-think/src/cli/app/: api_client.py  clarifier.py  main.py  meta.py  prompts.py  session_recorder.py  storage.py  workspace.py
src/qtcloud-think/src/cli/docs/dev/: index.md  tui-design.md
src/qtcloud-think/src/cli/tests/: test_module_checker.py  test_storage.py
src/qtcloud-think/src/provider/: pyproject.toml
src/qtcloud-think/src/provider/app/: main.py
src/qtcloud-think/src/provider/app/agents/: __init__.py  base.py  meta.py  observer.py  sower.py
src/qtcloud-think/src/provider/app/infrastructure/: __init__.py  llm_client.py  prompts.py  session_recorder.py  storage.py  workspace.py
src/qtcloud-think/src/provider/tests/: test_agents.py  test_code_cycle.py
(+296 files in other folders)
