[project]
name = "qtadmin"
version = "0.0.1"
description = "QuantTide Admin"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "lark-oapi>=1.5.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
