[project]
name = "qtadmin-provider"
version = "0.0.1"
description = "量潮管理后台"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "QuantTide", email = "opensource@quanttide.com"}
]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.109.0",
    "sqlmodel>=0.0.16",
    "uvicorn[standard]>=0.29.0",  # 注意 extras 放在方括号内
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "openai>=1.0.0"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "sqlmodel[dev]>=0.0.16",
]
