[project]
name = "qtcloud-data-provider"
version = "0.1.0-alpha.1"
description = "量潮数据云服务端"
authors = [
    { name = "QuantTide Inc.", email = "opensource@quanttide.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.5.2",
    "sqlalchemy>=2.0.22",
    "fastapi-restful>=0.5.0",
    "typing-inspect>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "coverage>=7.3.2",
    "pre-commit>=3.5.0",
    "httpx>=0.25.2",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]

[project.scripts]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.2",
    "coverage>=7.3.2",
    "pre-commit>=3.5.0",
    "httpx>=0.25.2",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]

[tool.ruff]
exclude = [
    "tests",
    "integrated_tests",
    ".pre-commit-config.yaml",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
