[project]
name = "qtcloud-data"
version = "0.1.0"
description = "量潮数据云 Python 工具箱"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["integrated_tests"]
pythonpath = ["."]
