[project]
name = "qtcloud-think-provider"
version = "0.1.0"
description = "qtcloud-think Provider API 服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.0.0",
    "openai>=1.58.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "requests>=2.32.0",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
